[package]
name = "dataloader_rs"
version = "0.1.0"
edition = "2021"
categories = ["science"]
keywords = ["dataloader", "pytorch", "tensorflow", "AI", "machine_learning"]
repository = "https://github.com/Tudyx/dataloader_rs"
description = "Rust implementation to the PyTorch DataLoader"

[dependencies]
ndarray = { version = "0.15.4", features = ["serde"] }
ndarray-rand = "0.14.0"
itertools = "0.10.3"
rand = "0.8.5"

[dev-dependencies]
csv = "1.1.6"
image = "0.24.3"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }

