[package]
name = "dataloader_rs"
version = "0.1.0"
authors = ["Tudy Gourmelen <gourmelentudy@gmail.com>"]
edition = "2021"
description = "Rust implementation to the PyTorch DataLoader"
readme = "README.md"
repository = "https://github.com/Tudyx/dataloader_rs"
license = "MIT OR Apache-2.0"
keywords = ["dataloader", "pytorch", "tensorflow", "AI", "machine_learning"]
categories = ["science"]

[dependencies]
ndarray = { version = "0.15.4", features = ["serde"] }
ndarray-rand = "0.14.0"
itertools = "0.10.3"
rand = "0.8.5"

[dev-dependencies]
csv = "1.1.6"
image = "0.24.3"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }

