[package]
name = "ai-dataloader"
version = "0.5.4"
authors = ["Tudy Gourmelen <gourmelentudy@gmail.com>"]
edition = "2021"
description = "Rust implementation to the PyTorch DataLoader"
readme = "README.md"
repository = "https://github.com/Tudyx/ai-dataloader"
documentation = "https://docs.rs/ai-dataloader/"
license = "MIT OR Apache-2.0"
keywords = ["dataloader", "pytorch", "tensorflow", "AI", "machine_learning"]
categories = ["science"]

[lib]
bench = false

[package.metadata.docs.rs]
all-features = true
# tch doc are broken without this feature.
features = ["tch/doc-only"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ndarray = { version = "0.15.4", features = ["serde"] }
ndarray-rand = "0.14.0"
itertools = "0.10.3"
rand = "0.8.5"
tch = { version = "0.11.0", optional = true }


[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
csv = "1.1.6"
image = "0.24.3"
itertools = "0.10.3"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }

[[example]]
name = "image"
path = "examples/image.rs"

[[example]]
name = "iterable"
path = "examples/iterable.rs"

[[bench]]
name = "throughput"
harness = false
